--- a/index.html
+++ b/index.html
@@ -12,19 +12,19 @@
     <title>WeatherDash</title>
     <link href="./assets/CSS/style.css" rel="stylesheet">
 </head>
+
 <body>
     <header class="top"> 
         <h1>Weather Dashboard</h1>
     </header>
-    
     <div class="m-4">
-            <h2>Search for a City: 🌞</h2>
+            <h2>Search for a City: 🌧 🌞 ⛅️ 🌪 ❄️</h2>
     </div> 
         <form>
             <div class="form-row">
                 <div class="col-2 m-4">
                     <input type="text" class="form-control" placeholder="State">
-                    <button type="button" class="btn btn-primary btn-sm">Search</button>
+                    <button id="button" class="btn btn-primary btn-sm">Search</button>
                 </div>
                     <div class="card border-primary">
                         <div class="card-body">
@@ -34,5 +34,49 @@
                 </div>
             </div>
         </form>
+        <div class="container p-4">
+            <div class="row justify-content-end">
+                <div class="col-sm-2">
+                    <h4>Monday</h4>
+                    <ul class="list-group">
+                        <li class="list-group-item">Temp<span class="badge">12</span></li>
+                        <li class="list-group-item">Humidity<span class="badge">5</span></li>
+                        <li class="list-group-item">Wind<span class="badge">3</span></li>
+                    </ul>
+                </div>
+                <div class="col-sm-2">
+                    <h4>Tuesday</h4>
+                    <ul class="list-group">
+                        <li class="list-group-item">Temp<span class="badge">12</span></li>
+                        <li class="list-group-item">Humidity<span class="badge">5</span></li>
+                        <li class="list-group-item">Wind<span class="badge">3</span></li>
+                    </ul>
+                </div>
+                <div class="col-sm-2">
+                    <h4>Wednesday</h4>
+                    <ul class="list-group">
+                        <li class="list-group-item">Temp<span class="badge">12</span></li>
+                        <li class="list-group-item">Humidity<span class="badge">5</span></li>
+                        <li class="list-group-item">Wind<span class="badge">3</span></li>
+                    </ul>
+                </div>
+                <div class="col-sm-2">
+                    <h4>Thursday</h4>
+                    <ul class="list-group">
+                        <li class="list-group-item">Temp<span class="badge">12</span></li>
+                        <li class="list-group-item">Humidity<span class="badge">5</span></li>
+                        <li class="list-group-item">Wind<span class="badge">3</span></li>
+                    </ul>
+                </div>
+                <div class="col-sm-2">
+                    <h4>Friday</h4>
+                    <ul class="list-group">
+                        <li class="list-group-item">Temp<span class="badge">12</span></li>
+                        <li class="list-group-item">Humidity<span class="badge">5</span></li>
+                        <li class="list-group-item">Wind<span class="badge">3</span></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
 </body>
 </html>
