updates to java

--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
     </div> 
         <form>
             <div class="form-row">
-                <div class="col-2 m-4">
-                    <input type="text" class="form-control" placeholder="State">
+                <div class="col-2 m-4 Cities">
+                    <input type= "text" id= "input-get" placeholder= "City">
                     <button id="button" class="btn btn-primary btn-sm">Search</button>
+
                 </div>
                     <div class="card border-primary">
                         <div class="card-body">
-                        jalsdkjfalskdjfsa;lkdfjsdlkfjlskdfjlskdfjslkfjasldkfjas;ldfkjasldkfjasldkfjasl;dkfjalskdfjlaskdjfasldjfa;sld
-                        klasjdf;alskjd
+                            <input id="input-show" placeholder="Current city forecast">
                     </div>
                 </div>
             </div>
@@ -39,44 +39,45 @@
                 <div class="col-sm-2">
                     <h4>Monday</h4>
                     <ul class="list-group">
-                        <li class="list-group-item">Temp<span class="badge">12</span></li>
-                        <li class="list-group-item">Humidity<span class="badge">5</span></li>
-                        <li class="list-group-item">Wind<span class="badge">3</span></li>
+                        <li class="list-group-item monTemp">Temp<span class="badge">12</span></li>
+                        <li class="list-group-item monHum">Humidity<span class="badge">5</span></li>
+                        <li class="list-group-item monWind">Wind<span class="badge">3</span></li>
                     </ul>
                 </div>
                 <div class="col-sm-2">
                     <h4>Tuesday</h4>
                     <ul class="list-group">
-                        <li class="list-group-item">Temp<span class="badge">12</span></li>
-                        <li class="list-group-item">Humidity<span class="badge">5</span></li>
-                        <li class="list-group-item">Wind<span class="badge">3</span></li>
+                        <li class="list-group-item tuesTemp">Temp<span class="badge">12</span></li>
+                        <li class="list-group-item tuesHum">Humidity<span class="badge">5</span></li>
+                        <li class="list-group-item tuesWind">Wind<span class="badge">3</span></li>
                     </ul>
                 </div>
                 <div class="col-sm-2">
                     <h4>Wednesday</h4>
                     <ul class="list-group">
-                        <li class="list-group-item">Temp<span class="badge">12</span></li>
-                        <li class="list-group-item">Humidity<span class="badge">5</span></li>
-                        <li class="list-group-item">Wind<span class="badge">3</span></li>
+                        <li class="list-group-item wedTemp">Temp<span class="badge">12</span></li>
+                        <li class="list-group-item wedHum">Humidity<span class="badge">5</span></li>
+                        <li class="list-group-item wedWind">Wind<span class="badge">3</span></li>
                     </ul>
                 </div>
                 <div class="col-sm-2">
                     <h4>Thursday</h4>
                     <ul class="list-group">
-                        <li class="list-group-item">Temp<span class="badge">12</span></li>
-                        <li class="list-group-item">Humidity<span class="badge">5</span></li>
-                        <li class="list-group-item">Wind<span class="badge">3</span></li>
+                        <li class="list-group-item thursTemp">Temp<span class="badge">12</span></li>
+                        <li class="list-group-item thursHum">Humidity<span class="badge">5</span></li>
+                        <li class="list-group-item thursWind">Wind<span class="badge">3</span></li>
                     </ul>
                 </div>
                 <div class="col-sm-2">
                     <h4>Friday</h4>
                     <ul class="list-group">
-                        <li class="list-group-item">Temp<span class="badge">12</span></li>
-                        <li class="list-group-item">Humidity<span class="badge">5</span></li>
-                        <li class="list-group-item">Wind<span class="badge">3</span></li>
+                        <li class="list-group-item friTemp">Temp<span class="badge">12</span></li>
+                        <li class="list-group-item friHum">Humidity<span class="badge">5</span></li>
+                        <li class="list-group-item friWind">Wind<span class="badge">3</span></li>
                     </ul>
                 </div>
             </div>
         </div>
+        <script src="./assets/script.js"></script>
 </body>
 </html>
